add update darkmode

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# DATABASE_URL = "mongodb+srv://Levius810:NgLlVAFjY023mYA4@leviushrm.lyiej.mongodb.net/NestJs"
+DATABASE_URL = "mongodb+srv://Levius810:1Zp6lTQ5mfsW2Huz@leviushrm.lyiej.mongodb.net/NestJs"
 
-DATABASE_URL = "mongodb://localhost:27017/ChatApp"
+# DATABASE_URL = "mongodb://localhost:27017/ChatApp"
 SERCET_ACCESSTOKEN = "2I*5f5OE9tlGIbg*3Q*C"
 
 TYPE = "service_account",
